# cs1951q

./: .gitignore  Cargo.toml  README.md  debug.rice  debug_array.rice  debug_func.rice  submit.sh
perf/: mandelbrot.rice
src/: lib.rs  main.rs  stdlib.rs  utils.rs
src/ast/: grammar.lalrpop  mod.rs  print.rs  types.rs
src/bc/: lower.rs  mod.rs  print.rs  types.rs  visit.rs
src/bc/dataflow/: mod.rs
src/rt/: codegen.rs  conversions.rs  mod.rs  reloop.rs
src/tir/: closure.rs  desugar.rs  mod.rs  print.rs  typeck.rs  types.rs  visit.rs
tests/: snapshots.rs
tests/programs/arrays/: array_copy.rice  array_copy.rice.snap  array_of_tuples.rice  array_of_tuples.rice.snap  arrays_given.rice  arrays_given.rice.snap  bad_array_type.rice  bad_array_type.rice.snap  bad_array_type_mutation.rice  bad_array_type_mutation.rice.snap  bad_nested_type.rice  bad_nested_type.rice.snap  empty_array.rice  empty_array.rice.snap  multi_array_mutation.rice  multi_array_mutation.rice.snap  nested_array_copy.rice  nested_array_copy.rice.snap  nested_array_copy.rice.snap.new  nested_arrays.rice  nested_mutation.rice  nested_mutation.rice.snap  oob_access.rice  oob_access.rice.snap  oob_mutation.rice  oob_mutation.rice.snap  single_array.rice  single_array.rice.snap  single_array_mutation.rice  single_array_mutation.rice.snap
tests/programs/control/: control_bad_break.rice  control_bad_break.rice.snap  control_bad_break.rice.snap.new  control_bad_break.snap  control_break_given.rice  control_break_value.rice  control_double_break.rice  control_double_break.rice.snap  control_if.rice.snap  (+9 more)
(+114 files in other folders)
