[package]
name = "rice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bimap = "0.6.3"
clap = { version = "4.4", features = ["derive"] }
either = "1.15.0"
env_logger = "0.11.8"
index_vec = "0.1.4"
indexical = { version = "0.10.2", features = ["serde"] }
internment = { version = "0.8.6", features = ["serde"] }
itertools = "0.14.0"
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
log = "=0.4.27" # Keep this the same as wasmtime
maplit = "1.0.2"
miette = { version = "7.5.0", features = ["fancy"] }
ordered-float = { version = "5.0.0", features = ["serde"] }
petgraph = { version = "0.8.1", features = ["serde-1"] }
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
smallvec = "1.15.0"
strum = { version = "0.27.2", features = ["derive"] }
textwrap = "0.16.2"
thiserror = "2.0.12"
wasm-encoder = "0.238.0"
wasmparser = "=0.236.0" # Keep this the same as wasmtime
wasmprinter = "0.238.0"

[dependencies.wasmtime]
version = "36.0.2"
default-features = false
features = ["gc-drc", "runtime", "std", "cranelift"]

[build-dependencies]
lalrpop = "0.20.0"

[dev-dependencies]
insta = { version = "1.43.1", features = ["toml"] }
shlex = "1.3.0"
walkdir = "2.5.0"

[profile.profile]
inherits = "release"
debug = true
